--- a/src/sass/theme/_djMain.scss
+++ b/src/sass/theme/_djMain.scss
@@ -400,20 +400,27 @@ input:focus, select:foucs {
   left: 450px;
   overflow: scroll;
 }
-.modal .modal-dialog.modal-fullscreen{
+// .modal .modal-dialog.modal-fullscreen{
 
-  position: fixed;
-  left: 0px;
-  overflow: auto;
-  overflow-x:hidden;
-  width: 100%;
-  height: 100%;
-  padding: 0;
-}
-.modal-content {
-  height: 100%;
-  border-radius: 0;
-}
+//   position: fixed;
+//   left: 0px;
+
+//   width: 100%;
+//   height: 100%;
+//   padding: 0;
+//   min-height: 100%;
+//   height: auto;
+//   border-radius: 0;
+//   border: none;
+//   overflow: auto;
+// }
+// .modal-content  {
+//   min-height: 100%;
+//   height: auto;
+//   border-radius: 0;
+//   border: none;
+//   overflow: auto;
+// }
 .overflow-visible,
 .overflow-visible .ui-grid-cell-contents {
   overflow: visible;
