--- a/src/sass/theme/_empMain.scss
+++ b/src/sass/theme/_empMain.scss
@@ -1162,13 +1162,22 @@ input[type=checkbox], input[type=radio],input[type=file] {
 .add-link{
   color: #52b8e9 !important;
 }
-.modal-content {
-  min-height: 100%;
-  height: auto;
-  border-radius: 0;
-  border: none;
-  overflow: auto;
+// .modal-content {
+//   min-height: 100%;
+//   height: auto;
+//   border-radius: 0;
+//   border: none;
+//   overflow: auto;
+
+// }
+
+.modal-dialog {
   width: 100%;
-  left: 0px;;
+  height: 100%;
+  padding: 0;
 }
 
+.modal-content {
+  height: 100%;
+  border-radius: 0;
+}
