--- a/src/app/pages/configuration/company/legal/edit-signatory.html
+++ b/src/app/pages/configuration/company/legal/edit-signatory.html
@@ -45,7 +45,7 @@
                             <div class="col-sm-4 clear-left-padding">
                                 <div class="form-group">
                                     <label>Email</label>
-                                    <input type="text" class="form-control" data-ng-model="entity.ASDSignatureName" name="signatoryName" id="signatoryName" required
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDEmail" name="signatoryName" id="signatoryName" required
                                     />
                                     <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryName" data-required-error="Name is required"
                                         data-form-submit="addSignatoryForm.$submitted"></span>
@@ -54,7 +54,7 @@
                             <div class="col-sm-4 clear-side-padding">
                                 <div class="form-group">
                                     <label>Pan Card</label>
-                                    <input type="text" class="form-control" data-ng-model="entity.ASDSignatoryFathersName" name="signatoryFather" id="signatoryFather"
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDPanCard" name="signatoryFather" id="signatoryFather"
                                         required />
                                     <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryFather" data-required-error="Father name is required"
                                         data-form-submit="addSignatoryForm.$submitted"></span>
@@ -67,7 +67,7 @@
                             <div class="col-sm-4 clear-left-padding">
                                 <div class="form-group">
                                     <label>Flat/Door/Block No</label>
-                                    <input type="text" class="form-control" data-ng-model="entity.ASDSignatureName" name="signatoryName" id="signatoryName" required
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDFlat" name="signatoryName" id="signatoryName" required
                                     />
                                     <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryName" data-required-error="Name is required"
                                         data-form-submit="addSignatoryForm.$submitted"></span>
@@ -76,7 +76,7 @@
                             <div class="col-sm-4 clear-side-padding">
                                 <div class="form-group">
                                     <label>Street/Lane (Optional)</label>
-                                    <input type="text" class="form-control" data-ng-model="entity.ASDSignatoryFathersName" name="signatoryFather" id="signatoryFather"
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDStreet" name="signatoryFather" id="signatoryFather"
                                         required />
                                     <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryFather" data-required-error="Father name is required"
                                         data-form-submit="addSignatoryForm.$submitted"></span>
@@ -85,7 +85,7 @@
                             <div class="col-sm-4 clear-right-padding">
                                 <div class="form-group">
                                     <label>Area/Locality (Optional)</label>
-                                    <input type="text" class="form-control" data-ng-model="entity.ASDDesgId" name="signatoryDesignation" id="signatoryDesignation"
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDArea" name="signatoryDesignation" id="signatoryDesignation"
                                         required />
                                     <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryDesignation" data-required-error="Designation is required"
                                         data-form-submit="addSignatoryForm.$submitted"></span>
@@ -97,7 +97,7 @@
                             <div class="col-sm-3 clear-left-padding">
                                 <div class="form-group">
                                     <label>Pin code</label>
-                                    <input type="text" class="form-control" data-ng-model="entity.ASDSignatureName" name="signatoryName" id="signatoryName" required
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDPinCode" name="signatoryName" id="signatoryName" required
                                     />
                                     <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryName" data-required-error="Name is required"
                                         data-form-submit="addSignatoryForm.$submitted"></span>
@@ -106,7 +106,7 @@
                             <div class="col-sm-3 clear-side-padding">
                                 <div class="form-group">
                                     <label>Country</label>
-                                    <input type="text" class="form-control" data-ng-model="entity.ASDSignatoryFathersName" name="signatoryFather" id="signatoryFather"
+                                    <input type="text" class="form-control" name="signatoryFather" id="signatoryFather"
                                         required />
                                     <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryFather" data-required-error="Father name is required"
                                         data-form-submit="addSignatoryForm.$submitted"></span>
@@ -115,7 +115,7 @@
                             <div class="col-sm-3 clear-right-padding">
                                 <div class="form-group">
                                     <label>State</label>
-                                    <input type="text" class="form-control" data-ng-model="entity.ASDDesgId" name="signatoryDesignation" id="signatoryDesignation"
+                                    <input type="text" class="form-control"  name="signatoryDesignation" id="signatoryDesignation"
                                         required />
                                     <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryDesignation" data-required-error="Designation is required"
                                         data-form-submit="addSignatoryForm.$submitted"></span>
@@ -124,7 +124,7 @@
                             <div class="col-sm-3 clear-right-padding">
                                 <div class="form-group">
                                     <label>City</label>
-                                    <input type="text" class="form-control" data-ng-model="entity.ASDDesgId" name="signatoryDesignation" id="signatoryDesignation"
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDCityId" name="signatoryDesignation" id="signatoryDesignation"
                                         required />
                                     <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryDesignation" data-required-error="Designation is required"
                                         data-form-submit="addSignatoryForm.$submitted"></span>
