--- a/src/app/pages/configuration/company/legal/legal.html
+++ b/src/app/pages/configuration/company/legal/legal.html
@@ -130,13 +130,13 @@
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label dotranslate>Company Name</label>
-                                                            <input type="text" class="form-control" />
+                                                            <input type="text" data-ng-model="entity.company.CCOName" class="form-control" />
                                                         </div>
                                                     </div>
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label dotranslate>Type Of Business</label>
-                                                            <select class="form-control"></select>
+                                                            <select class="form-control" data-ng-model="entity.company.CCOTypeOfBussinessId"></select>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -144,13 +144,13 @@
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label dotranslate>Date of Registration</label>
-                                                            <input type="date" class="form-control" />
+                                                            <input type="date" data-ng-model="entity.company.CCODateOfRegistration" class="form-control" />
                                                         </div>
                                                     </div>
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label dotranslate>Registered Address</label>
-                                                            <input type="text" class="form-control" />
+                                                            <input type="text" data-ng-model="entity.company.CCOAddress" class="form-control" />
                                                         </div>
                                                     </div>
                                                 </div>
@@ -158,13 +158,13 @@
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label dotranslate>Company Identification Number</label>
-                                                            <input type="text" class="form-control" />
+                                                            <input type="text" data-ng-model="entity.company.CCOIdentificationNumber" class="form-control" />
                                                         </div>
                                                     </div>
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label>&nbsp;</label>
-                                                            <input type="text" class="form-control" />
+                                                            <input type="text" data-ng-model="entity.company.CCOAddressLineTwo" class="form-control" />
                                                         </div>
                                                     </div>
                                                 </div>
@@ -176,17 +176,21 @@
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <div class="row">
-                                                                <div class="col-sm-4">
-                                                                    <label>CIty</label>
-                                                                    <input type="text" class="form-control" />
+                                                                <div class="col-sm-3">
+                                                                    <label>Country</label>
+                                                                    <input type="text" data-ng-model="" class="form-control" />
                                                                 </div>
-                                                                <div class="col-sm-4">
+                                                                <div class="col-sm-3">
                                                                     <label>State</label>
-                                                                    <input type="text" class="form-control" />
+                                                                    <input type="text" data-ng-model="" class="form-control" />
+                                                                </div>
+                                                                <div class="col-sm-3">
+                                                                    <label>City</label>
+                                                                    <input type="text" data-ng-model="entity.company.CCOCityId" class="form-control" />
                                                                 </div>
                                                                 <div class="col-sm-4">
-                                                                    <label>Pincode</label>
-                                                                    <input type="text" class="form-control" />
+                                                                    <label>PinCode</label>
+                                                                    <input type="text" data-ng-model="entity.company.CCOPinCode" class="form-control" />
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -200,7 +204,7 @@
                                                     </div>
                                                     <div class="col-md-6 text-right">
 
-                                                        <button class="btn btn-success">SAVE</button>
+                                                        <button class="btn btn-success" data-ng-click="addCompany()">SAVE</button>
                                                         <button class="btn">Clear</button>
                                                     </div>
 
@@ -219,13 +223,13 @@
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label dotranslate>PAN</label>
-                                                            <input type="text" class="form-control" />
+                                                            <input type="text" data-ng-model="entity.incomeTax.ITDPanNumber" class="form-control" />
                                                         </div>
                                                     </div>
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label dotranslate>GST</label>
-                                                            <input type="text" class="form-control" />
+                                                            <input type="text" data-ng-model="entity.incomeTax.ITDGST" class="form-control" />
                                                         </div>
                                                     </div>
                                                 </div>
@@ -233,13 +237,13 @@
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label dotranslate>TIN</label>
-                                                            <input type="text" class="form-control" />
+                                                            <input type="text" data-ng-model="entity.incomeTax.ITDTinNumber" class="form-control" />
                                                         </div>
                                                     </div>
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label dotranslate>TAN</label>
-                                                            <input type="text" class="form-control" />
+                                                            <input type="text" data-ng-model="entity.incomeTax.ITDTanNumber" class="form-control" />
                                                         </div>
                                                     </div>
                                                 </div>
@@ -247,7 +251,7 @@
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label dotranslate>Form 16 Signatory</label>
-                                                            <select class="form-control"></select>
+                                                            <select class="form-control" data-ng-model="entity.incomeTax.ITDForm16SignatoryId"></select>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-6">
@@ -261,7 +265,7 @@
                                                     </div>
                                                     <div class="col-md-6 text-right">
 
-                                                        <button class="btn btn-success">SAVE</button>
+                                                        <button class="btn btn-success" data-ng-click="addIncomeTax()">SAVE</button>
                                                         <button class="btn">Clear</button>
                                                     </div>
 
@@ -280,13 +284,13 @@
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label dotranslate>PF Number</label>
-                                                            <input type="text" class="form-control" />
+                                                            <input type="text" class="form-control" data-ng-model="entity.pFDetail.PFDPFNumber" />
                                                         </div>
                                                     </div>
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label dotranslate>Registration Date</label>
-                                                            <input type="date" class="form-control" />
+                                                            <input type="date" class="form-control" data-ng-model="entity.pFDetail.PFDRegistrationDate" />
                                                         </div>
                                                     </div>
                                                 </div>
@@ -295,7 +299,7 @@
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label dotranslate>Authorised Signatory</label>
-                                                            <select class="form-control"></select>
+                                                            <select class="form-control" data-ng-model="entity.pFDetail.PFDAuthorisedSignatoryId"></select>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-6">
@@ -309,7 +313,7 @@
                                                     </div>
                                                     <div class="col-md-6 text-right">
 
-                                                        <button class="btn btn-success">SAVE</button>
+                                                        <button class="btn btn-success" data-ng-click="addPFDetail()">SAVE</button>
                                                         <button class="btn">Clear</button>
                                                     </div>
 
@@ -327,13 +331,13 @@
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label dotranslate>ESI Number</label>
-                                                            <input type="text" class="form-control" />
+                                                            <input type="text" class="form-control" data-ng-model="entity.esiDetail.ESINumber" />
                                                         </div>
                                                     </div>
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label dotranslate>Registration Date</label>
-                                                            <input type="date" class="form-control" />
+                                                            <input type="date" class="form-control" data-ng-model="entity.esiDetail.ESIRegistrationDate" />
                                                         </div>
                                                     </div>
                                                 </div>
@@ -342,7 +346,7 @@
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label dotranslate>Authorised Signatory</label>
-                                                            <select class="form-control"></select>
+                                                            <select class="form-control" data-ng-model="entity.esiDetail.ESIAuthorisedSignatoryId"></select>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-6">
@@ -356,7 +360,7 @@
                                                     </div>
                                                     <div class="col-md-6 text-right">
 
-                                                        <button class="btn btn-success">SAVE</button>
+                                                        <button class="btn btn-success" data-ng-click="addESIDetail()">SAVE</button>
                                                         <button class="btn">Clear</button>
                                                     </div>
 
@@ -390,8 +394,12 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-md-2">
-                                                        <a href><i class="fa fa-edit"></i></a>
-                                                        <a href><i class="fa fa-trash-o"></i></a>
+                                                        <a href>
+                                                            <i class="fa fa-edit"></i>
+                                                        </a>
+                                                        <a href>
+                                                            <i class="fa fa-trash-o"></i>
+                                                        </a>
                                                     </div>
                                                 </div>
                                             </div>
