--- a/src/app/pages/payrollprocess/perks/assign/assignperks/assignperks.html
+++ b/src/app/pages/payrollprocess/perks/assign/assignperks/assignperks.html
@@ -1,4 +1,4 @@
-<div class="modal-content uib-modal-transclude">
+<div class="modal-content ">
     <div class="modal-header bg-primary title-bar">
         <div class="col-lg-12">
             <p class="text-center">Add Perks</p>
