--- a/src/sass/theme/_djMain.scss
+++ b/src/sass/theme/_djMain.scss
@@ -412,11 +412,11 @@ input:focus, select:foucs {
   height: 100%;
   padding: 0;
 }
-.modal-content {
-  height: 100%;
-  border-radius: 0;
+// .modal-content {
+//   height: 100%;
+//   border-radius: 0;
   
-}
+// }
 .modal:before{
   display:none !important;
 }
