--- a/src/sass/theme/_djMain.scss
+++ b/src/sass/theme/_djMain.scss
@@ -366,16 +366,14 @@ input:focus, select:foucs {
   position: fixed;
   top: 150px;
   left: 450px;
-  height:auto !important;
-  border-radius: unset !important;
+
 }
 .modal .modal-dialog.modal-right-bottom-500{
   width: 600px;
   position: fixed;
   right: 0;
   bottom: 0;
-  height:auto !important;
-  border-radius: unset !important;
+
 }
 .modal .modal-dialog.modal-top-center-600
 {
@@ -384,8 +382,6 @@ input:focus, select:foucs {
   top: 100px;
   left: 450px;
   overflow: auto;
-  height:auto !important;
-  border-radius: unset !important;
 }
 
 
@@ -407,19 +403,19 @@ input:focus, select:foucs {
   overflow: scroll;
 }
 
-.modal-dialog {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-}
+// .modal-dialog {
+//   width: 100%;
+//   height: 100%;
+//   padding: 0;
+// }
 // .modal-content {
 //   height: 100%;
 //   border-radius: 0;
   
 // }
-.modal:before{
-  display:none !important;
-}
+// .modal:before{
+//   display:none !important;
+// }
 .overflow-visible,
 .overflow-visible .ui-grid-cell-contents {
   overflow: visible;
