--- a/src/app/pages/payrollprocess/perks/types/types.html
+++ b/src/app/pages/payrollprocess/perks/types/types.html
@@ -1,5 +1,6 @@
-<div class="col-sm-12 clear-side-padding">
-
+<div class="col-sm-12 clear-side-padding content-container">
+       
+                
     <div class="col-sm-12">
         <div class="col-sm-6 clear-left-padding" style="top: 15px;">
             <p>
