--- a/src/sass/theme/_djMain.scss
+++ b/src/sass/theme/_djMain.scss
@@ -366,14 +366,16 @@ input:focus, select:foucs {
   position: fixed;
   top: 150px;
   left: 450px;
-
+  height:auto !important;
+  border-radius: unset !important;
 }
 .modal .modal-dialog.modal-right-bottom-500{
   width: 600px;
   position: fixed;
   right: 0;
   bottom: 0;
-
+  height:auto !important;
+  border-radius: unset !important;
 }
 .modal .modal-dialog.modal-top-center-600
 {
@@ -382,6 +384,8 @@ input:focus, select:foucs {
   top: 100px;
   left: 450px;
   overflow: auto;
+  height:auto !important;
+  border-radius: unset !important;
 }
 
 
@@ -393,6 +397,7 @@ input:focus, select:foucs {
   top: 65px;
   left: 478px;
   overflow: scroll;
+  
 }
 .modal .modal-dialog.modal-left-top-center{
   width: 500px;
@@ -402,20 +407,19 @@ input:focus, select:foucs {
   left: 450px;
   overflow: scroll;
 }
+.modal .modal-dialog.modal-fullscreen{
+  width: 100%;
+  height: 100%;
+  padding: 0; 
+}
 
-// .modal-dialog {
-//   width: 100%;
-//   height: 100%;
-//   padding: 0;
-// }
-// .modal-content {
-//   height: 100%;
-//   border-radius: 0;
-  
-// }
-// .modal:before{
-//   display:none !important;
-// }
+.modal-content {
+  height: 100%;
+  overflow-y: auto;
+}
+.modal:before{
+  display:none !important;
+}
 .overflow-visible,
 .overflow-visible .ui-grid-cell-contents {
   overflow: visible;
